- [ADD] Logs API support.
This enables a logging library to emit log records.
The Logs API is not intended for use by an application or general library.
- [ADD] `LoggerProvider` support in programmatic configuration of the SDK.
- [ADD] By default, populate span attribute for source code column number.
- [ADD] New option `:prop-overrides` on `steffan-westcott.clj-otel.sdk.autoconfigure/init-otel-sdk!` to override default config values.
- Bump deps
* [MAINT] OpenTelemetry `1.54.1`, instrumentation `2.20.1`

=== `0.2.9` (2025-09-15)

- [FIX] [BREAK] Added option `:set-bound-context?` to `server-span-interceptors`, with default `false`.
Previously, bound context was always set, which prevented correct use of current context in subsequent processing.
- [FIX] In HTTP server spans, ensure values of multiple request headers with same name are captured as an array.
Also, do not normalize `-` to `_` in header names.
- [FIX] More robust processing of potentially incomplete Ring request maps to extract server span attributes.
- [FIX] To ensure HTTP/2 compatibility, read server name and port from Ring request map rather than `Host` header, which is mandatory in HTTP/1.1 only.
- [FIX] Pass HTTP route data to the instrumentation agent when present.
This ensures measurements captured by the agent for HTTP server span metrics have the `http.route` attribute.
- [FIX] Ensure provided interceptors correctly set attributes for manually created HTTP server span metrics.
- [FIX] Do not include app-root in server span names.
- [FIX] Set minimal version of Clojure dependency in `clj-otel` modules to 1.10.3.
- [ADD] New macros for wrapping spans around asynchronous code, using bound or explicit context.
Support is provided for several async libraries:
* `core.async`: Macros `chan-span/async-bound-chan-span` and `chan-span/chan-span-binding`
* `CompletableFuture` compatible such as `auspex`, `promesa` and `whew`: Macros `span/async-bound-cf-span` and `span/cf-span-binding`